--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "grunt-openports",
+  "name": "grunt-openport",
   "description": "Grunt plugin for finding open ports.",
   "version": "0.1.0",
-  "homepage": "https://github.com/shama/grunt-openports",
+  "homepage": "https://github.com/shama/grunt-openport",
   "author": {
     "name": "Kyle Robinson Young",
     "email": "kyle@dontkry.com",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/shama/grunt-openports.git"
+    "url": "git://github.com/shama/grunt-openport.git"
   },
   "bugs": {
-    "url": "https://github.com/shama/grunt-openports/issues"
+    "url": "https://github.com/shama/grunt-openport/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/shama/grunt-openports/blob/master/LICENSE-MIT"
+      "url": "https://github.com/shama/grunt-openport/blob/master/LICENSE-MIT"
     }
   ],
   "engines": {
